...
  final result = handler.decodeAndVerify(
    sdJwtToken: sdJwt,
    verifier: SDKeyVerifier(verifierKey),
  );

  return {
    'verificationResult': 'Verification: Success',
    'verificationDetails': formatVerificationDetails(result),
  };
}

String formatVerificationDetails(dynamic result) {
  if (result is String) {
...
